--- a/my-vite-app/src/pages/Editor.css
+++ b/my-vite-app/src/pages/Editor.css
@@ -16,7 +16,7 @@
 
 .project-name-input {
   background-color: #112240;
-  color: #ccd6f6;
+  color: #64ffda;
   border: 1px solid #233554;
   border-radius: 4px;
   padding: 0.5rem 1rem;
