--- a/my-vite-app/src/App.css
+++ b/my-vite-app/src/App.css
@@ -420,3 +420,24 @@ canvas {
     grid-template-rows: auto 1fr auto;
   }
 }
+
+.logo {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.logo-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.logo-small {
+  width: 180px;
+  height: 180px;
+}
