--- a/my-vite-app/src/pages/Editor.css
+++ b/my-vite-app/src/pages/Editor.css
@@ -51,15 +51,16 @@
   display: grid;
   grid-template-columns: 260px 1fr;
   gap: 1rem;
-  height: calc(100vh - 80px);
+  /* height: calc(100vh - 80px); */
   transition: grid-template-columns 0.3s ease;
+  align-items: start;
 }
 
 .left-panel {
   height: 100%;
   background-color: #112240;
   border-radius: 8px;
-  overflow: visible;
+  overflow-y: auto;
   position: relative;
   box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
 }
@@ -129,11 +130,11 @@
   border-radius: 8px;
   overflow: hidden;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
   padding: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+  /* height: calc(100vh - 130px); */
+  /* margin-top: 1rem; */
 }
 
 canvas {
@@ -141,6 +142,9 @@ canvas {
   display: block;
   cursor: default;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
+  position: relative;
+  /* margin: 0 auto; */
+  /* top: 50px; */
 }
 
 canvas.drag-over {
