--- a/my-vite-app/src/pages/Editor.css
+++ b/my-vite-app/src/pages/Editor.css
@@ -60,7 +60,7 @@
   height: 100%;
   background-color: #112240;
   border-radius: 8px;
-  overflow-y: auto;
+  /* overflow: visible; */
   position: relative;
   box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
 }
@@ -131,10 +131,10 @@
   overflow: hidden;
   position: relative;
   display: block;
+  justify-content: center;
+  align-items: center;
   padding: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  /* height: calc(100vh - 130px); */
-  /* margin-top: 1rem; */
 }
 
 canvas {
@@ -143,8 +143,6 @@ canvas {
   cursor: default;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
   position: relative;
-  /* margin: 0 auto; */
-  /* top: 50px; */
 }
 
 canvas.drag-over {
